--- a/src/app/pages/admin/product-admin/list-product-admin/list-product-admin.component.html
+++ b/src/app/pages/admin/product-admin/list-product-admin/list-product-admin.component.html
@@ -273,7 +273,8 @@
               Xoá
             </button>
             <a
-              routerLink="/products/{{ item._id }}"
+              routerLink="/product/{{ item._id }}"
+              target="_blank"
               class="font-medium text-blue-600 dark:text-blue-500 hover:underline mr-3"
               >Link</a
             >
