--- a/src/app/pages/client/checkout/checkout.component.html
+++ b/src/app/pages/client/checkout/checkout.component.html
@@ -40,8 +40,7 @@
           <i class="fas fa-user-alt" style="font-size: 48px"></i>
         </div>
         <div>
-          <p>Thai Vu Hong (thaivhph28695@fpt.edu.vn)</p>
-          <a class="text-blue-500" href="#">Đăng xuất</a>
+          <p>{{ defaultValue?.name }} ({{ defaultValue?.email }})</p>
         </div>
       </div>
       <form
