--- a/src/app/pages/client/checkout-success/checkout-success.component.html
+++ b/src/app/pages/client/checkout-success/checkout-success.component.html
@@ -1,4 +1,4 @@
-<section class="min-h-[85vh]">
+<section class="min-h-[85vh]" *ngIf="dataBill !== undefined">
   <div
     class="max-w-[78.57143em] w-[90%] grid grid-cols-2 m-auto py-[3%] px-[3%] gap-6"
   >
@@ -9,12 +9,12 @@
           Đặt hàng thành công
           <i class="fas fa-check-circle text-xl" style="color: #4dbbff"></i>
         </h3>
-        <h6>Mã đơn hàng #10029</h6>
+        <h6>Mã đơn hàng #{{ dataBill._id }}</h6>
         <h6>Cảm ơn bạn mua hàng</h6>
         <h6>
           Chúng tôi đã gửi thông tin đơn hàng đến địa chỉ email
-          <span class="font-bold">demo@gmail.com</span>, vui lòng theo dõi đơn
-          hàng
+          <span class="font-bold">{{ dataBill.email }}</span
+          >, vui lòng theo dõi đơn hàng
         </h6>
       </div>
       <div
@@ -22,16 +22,19 @@
       >
         <h3 class="md:mb-1 font-medium text-lg">Thông tin đơn hàng</h3>
         <h5 class="md:my-1">
-          Tên người nhận: <span class="font-bold">Lê Quang Minh Đức</span>
+          Tên người nhận: <span class="font-bold">{{ dataBill.name }}</span>
         </h5>
         <h5 class="md:my-1">
-          Điện thoại người nhận: <span class="font-bold">086.999.999</span>
+          Điện thoại người nhận:
+          <span class="font-bold">{{ dataBill.tel }}</span>
         </h5>
         <h5 class="md:my-1">
           Địa chỉ:
-          <span class="font-bold"
-            >Lê Đức Thọ , Nam Từ Liêm, Mỹ Đình 2, Hà Nội</span
-          >
+          <span class="font-bold">{{ dataBill.address }}</span>
+        </h5>
+        <h5 class="md:my-1">
+          Ghi chú:
+          <span class="font-bold">{{ dataBill.note }}</span>
         </h5>
         <h5 class="md:my-1">
           Phương thức thanh toán:
@@ -56,25 +59,27 @@
       </div>
     </div>
     <div class="grid-cols-2 border-l border-gray-300 px-[5%]">
-      <div class="flex">
+      <div *ngFor="let item of dataBill.list_cart" class="flex">
         <div class="w-[20%] h-[20%] relative">
           <img
-            src="https://product.hstatic.net/200000307615/product/nz43_copy_d314a24689e8433f842a3b6b9ee38be9_master.png"
+            src="{{ item.product.image[0] }}"
             alt=""
             class="object-cover h-[60px] w-[60px] overflow-hidden rounded-lg"
           />
           <span
             class="absolute top-[-5px] right-[40px] w-5 h-5 flex justify-center items-center bg-gray-500 text-white text-[9px] rounded-full z-10"
-            >1</span
+            >{{ item.quantity }}</span
           >
         </div>
         <div class="w-[60%]">
           <h3 class="uppercase line-clamp-2 text-sm px-1">
-            Quần jean nam siu cấp
+            {{ item.product.name }}
           </h3>
-          <h6 class="text-sm px-1">34</h6>
+          <h6 class="text-sm px-1">{{ item.product.size }}</h6>
         </div>
-        <div class="w-[20%] text-red-600 text-sm">1.000.000đ</div>
+        <div class="w-[20%] text-red-600 text-sm">
+          {{ formatMoney(item.product.price) }}
+        </div>
       </div>
       <hr />
       <div class="py-3">
@@ -83,7 +88,7 @@
             <h6>Tạm tính</h6>
           </div>
           <div>
-            <h6>1.000.000đ</h6>
+            <h6>{{ formatMoney(dataBill.price - shiperPrice) }}</h6>
           </div>
         </div>
         <div class="flex justify-between text-sm">
@@ -103,7 +108,9 @@
             <h6>Tổng cộng</h6>
           </div>
           <div>
-            <h6 class="font-semibold text-red-600 text-xl">1.000.000đ</h6>
+            <h6 class="font-semibold text-red-600 text-xl">
+              {{ formatMoney(dataBill.price) }}
+            </h6>
           </div>
         </div>
       </div>
