fix 1 vài css nữa

--- a/src/app/components/client/products-new/products-new.component.html
+++ b/src/app/components/client/products-new/products-new.component.html
@@ -24,7 +24,7 @@
       <div class="pb-5 my-2">
         <a routerLink="/product/{{ item._id }}">
           <h5
-            class="tracking-tight dark:text-white line-clamp-2 hover:text-[#618C2F] uppercase"
+            class="tracking-tight dark:text-white line-clamp-1 hover:text-[#618C2F] uppercase max-w-[80%]"
           >
             {{ item.name }}
           </h5>
